updated code and add model

--- a/KeraswithCNN.ipynb
+++ b/KeraswithCNN.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
       "Epoch 49/50\n",
       "125/125 [==============================] - 142s 1s/step - loss: 0.4032 - acc: 0.8270 - val_loss: 0.5658 - val_acc: 0.7768\n",
       "Epoch 50/50\n",
-      " 91/125 [====================>.........] - ETA: 33s - loss: 0.4311 - acc: 0.8269"
+      "125/125 [==============================] - 145s 1s/step - loss: 0.4218 - acc: 0.8230 - val_loss: 0.5171 - val_acc: 0.7668\n"
      ]
     }
    ],
