--- a/CNN/KeraswithCNN.ipynb
+++ b/CNN/KeraswithCNN.ipynb
@@ -239,7 +239,7 @@
     "    validation_data=validation_generator,\n",
     "    validation_steps=nb_validation_samples // batch_size)\n",
     "\n",
-    "model.save_weights('first_try.h5')"
+    "model.save_weights('CNN_Model.h5')"
    ]
   }
  ],
